--- a/version-control/material/figs/history_linear/fig.tex
+++ b/version-control/material/figs/history_linear/fig.tex
@@ -1,10 +1,11 @@
+% build with: pdflatex --shell-escape fig.tex
 \documentclass[tikz, convert={density=800}]{standalone}
 
 \usepackage{tikz}
 \definecolor{myBlue}{HTML}{42affa}
 
 \begin{document}
-\begin{tikzpicture}[>=latex, thick, shorten >=2pt, shorten <=2pt, ->, white]
+\begin{tikzpicture}[>=latex, thick, shorten >=2pt, shorten <=2pt, ->, myBlue]
   \tikzstyle{C}=[circle,fill=myBlue,text=white,minimum size=30pt,inner sep=2pt, font=\LARGE]
   \tikzstyle{B}=[text=myBlue, font=\LARGE]
 
