--- a/version-control/material/figs/history_rebase/fig.tex
+++ b/version-control/material/figs/history_rebase/fig.tex
@@ -1,3 +1,4 @@
+% build with: pdflatex --shell-escape fig.tex
 \documentclass[tikz, convert={density=800}]{standalone}
 
 \usepackage{tikz}
@@ -5,7 +6,7 @@
 \definecolor{myBlue}{HTML}{42affa}
 
 \begin{document}
-\begin{tikzpicture}[>=latex, thick, shorten >=2pt, shorten <=2pt, ->, white]
+\begin{tikzpicture}[>=latex, thick, shorten >=2pt, shorten <=2pt, ->, myBlue]
   \tikzstyle{C}=[circle,fill=myBlue,text=white,minimum size=30pt,inner sep=2pt, font=\LARGE]
   \tikzstyle{M}=[circle,fill=myOrange,text=white,minimum size=30pt,inner sep=2pt, font=\LARGE]
   \tikzstyle{B}=[text=myBlue, font=\LARGE]
