[wip] Finish content?

--- a/building-and-packaging/material/figs/filesystem_hierarchy_structure/fig.tex
+++ b/building-and-packaging/material/figs/filesystem_hierarchy_structure/fig.tex
@@ -17,7 +17,8 @@
   \node[C] at (2,3) (sbin) {\texttt{/sbin}};
   \node[C] at (4,3) (usr) {\texttt{/usr}};
   \node[C] at (6,3) (lib) {\texttt{/lib}};
-  \node[C] at (8,3) (dots) {\texttt{\ldots}};
+  \node[C] at (8,3) (dots) {\texttt{/home}};
+  \node[C] at (10,3) (dots) {\texttt{\ldots}};
 %  \node[C] at (6,3) (var) {\texttt{/var}};
 %  \node[C] at (3,3) (B) {\texttt{B}};
 %  \node[C] at (6,3) (C) {\texttt{C}};
