[wip] fix slide formatting

--- a/building-and-packaging/material/figs/filesystem_paths_python/fig.tex
+++ b/building-and-packaging/material/figs/filesystem_paths_python/fig.tex
@@ -15,11 +15,11 @@
   \node[C] at (1,1) (usrbin) {\texttt{/bin}};
   \node[C] at (4.5,1) (usrlocal) {\texttt{/lib/pythonX.Y}};
   
-%  \node[C] at (1,-1) (usrlocalbin) {\texttt{/bin}};
-%  \node[C] at (4.5,-1) (usrlocallib) {\texttt{/lib/pythonX.Y}};
+  \node[C] at (1,-0.5) (usrlocalbin) {\texttt{/bin}};
+  \node[C] at (4.5,-0.5) (usrlocallib) {\texttt{/lib/pythonX.Y}};
 
   \node[B] at (-3,1) (usrlevel) {\texttt{/usr}};
-%  \node[B] at (-3,-1) (usrlocallevel) {\texttt{\$\{HOME\}/.local}};
+  \node[B] at (-3,-0.5) (usrlocallevel) {\texttt{\$\{HOME\}/.local}};
   
 \end{tikzpicture}
 \end{document}
