[wip] update libraries and paths part

--- a/building-and-packaging/material/figs/filesystem_paths_python/fig.tex
+++ b/building-and-packaging/material/figs/filesystem_paths_python/fig.tex
@@ -14,9 +14,11 @@
 
   \node[C] at (1,1) (usrbin) {\texttt{/bin}};
   \node[C] at (4.5,1) (usrlocal) {\texttt{/lib/pythonX.Y}};
+  \node[C] at (8.0,1) (usrlocal) {\texttt{\ldots}};
   
   \node[C] at (1,-0.5) (usrlocalbin) {\texttt{/bin}};
   \node[C] at (4.5,-0.5) (usrlocallib) {\texttt{/lib/pythonX.Y}};
+  \node[C] at (8.0,-0.5) (usrlocal) {\texttt{\ldots}};
 
   \node[B] at (-3,1) (usrlevel) {\texttt{/usr}};
   \node[B] at (-3,-0.5) (usrlocallevel) {\texttt{\$\{HOME\}/.local}};
